tests/files/flow_controller_tests/should_run/016.cmdr
//Test divide with floats
x = 100.5 / 2.1 / 3.5 / 0.4 ;
println x;
x /= 3.7;
println x;