tests/files/flow_controller_tests/should_fail/014.cmdr
//Should fail due to divide by 0 with a variable holding 0.0
x = 3.5;
y = 0.0;
z = x / y;